Hide spinner from number input

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
                 <div>
                     <div>
                         <p class="label">Ordinary</p>
-                        <input id="ordinary" type="text" placeholder="$0.00">
+                        <input id="ordinary" type="number" placeholder="$0.00">
                     </div>
 
                     <div>
                         <p class="label">Loading</p>
-                        <input id="loading" type="text" placeholder="$0.00">
+                        <input id="loading" type="number" placeholder="$0.00">
                     </div>
 
                     <div>
                         <p class="label">Shift 25%</p>
-                        <input id="shift25" type="text" placeholder="$0.00">
+                        <input id="shift25" type="number" placeholder="$0.00">
                     </div>
 
                     <div>
                         <p class="label">Shift 50%</p>
-                        <input id="shift50" type="text" placeholder="$0.00">
+                        <input id="shift50" type="number" placeholder="$0.00">
                     </div>
                 </div>
 
@@ -45,12 +45,12 @@
                 <div>
                     <div>
                         <p class="label">Monday-Saturday</p>
-                        <input id="monsat" type="text" placeholder="0">
+                        <input id="monsat" type="number" placeholder="0">
                     </div>
 
                     <div>
                         <p class="label">Sunday</p>
-                        <input id="sun" type="text" placeholder="0">
+                        <input id="sun" type="number" placeholder="0">
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <p id="result">$0.00</p>
             </div>
 
-            <a href="https://www.ato.gov.au/uploadedFiles/Content/MEI/downloads/Weekly-tax-table-from-13-October-2020.pdf" target="_blank" style="font-size: 10px;">Tax Withheld Calculator</a>
+            <a class="footer" href="https://www.ato.gov.au/uploadedFiles/Content/MEI/downloads/Weekly-tax-table-from-13-October-2020.pdf" target="_blank" style="font-size: 10px;">Tax Withheld Calculator</a>
         </div>
     </div>
 
