--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#101010" />
     <title>Weekly Income Calculator</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
